<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RegistroAlumnos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="No.Control">No. Control</string>
    <string name="Dato1">Dato 1</string>
    <string name="nombre">Nombre</string>
    <string name="Dato2">Dato 2</string>
    <string name="apellidos">Apellidos</string>
    <string name="Dato3">Dato 3</string>
    <string name="title_activity_registroindividual">registroindividual</string>
    <string name="Nucontrol">Numero de Control</string>
    <string name="dato1">Dato 1</string>
    <string name="Nombre">Nombre</string>
    <string name="dato2">Dato 2</string>
    <string name="Apellidos">Apellidos</string>
    <string name="dato3">Dato 3</string>
    <string name="Semestre">Semestre</string>
    <string name="dato4">Dato 4</string>
    <string name="Carrera">Carrera</string>
    <string name="dato5">Dato 5</string>
    <string name="Email">Email</string>
    <string name="dato6">Dato 6</string>
    <string name="Direccion">Direccion</string>
    <string name="dato7">Dato 7</string>
</resources>
